# OS-Kernel-Learning-Simulation

./: .gitignore  CONTRIBUTING.md  DataDictionary_MiniOS_Simulator.docx  DataDictionary_MiniOS_Simulator.md  PRD_MiniOS_Simulator.docx  PRD_MiniOS_Simulator.md  README.md  SDD_MiniOS_Simulator.docx  SDD_MiniOS_Simulator.md  walkthrough.md.resolved
.gemini/: GEMINI.md  styleguide.md
Implementation Plan/: implementation_plan.md.resolved  overall_architecture_analysis.md  phase1_foundation_implementation_plan.md  phase2_process_manager_implementation_plan.md  phase3_scheduler_implementation_plan.md  phase4_memory_manager_implementation_plan.md  phase5_sync_manager_implementation_plan.md  phase6_clock_controller_integration_implementation_plan.md  phase7_api_bridge_implementation_plan.md  phase8_react_dashboard_implementation_plan.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
os-simulator/: CMakeLists.txt
os-simulator/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
os-simulator/dashboard/src/: App.tsx  index.css
os-simulator/dashboard/src/components/: DecisionLogPanel.tsx  MemoryPanel.tsx  ProcessPanel.tsx  SchedulerPanel.tsx  SimControlBar.tsx  SyncPanel.tsx  Taskbar.tsx
os-simulator/dashboard/src/hooks/: useSimControl.ts  useSimState.ts
os-simulator/dashboard/src/types/: SimState.ts
os-simulator/engine/: CMakeLists.txt  main.cpp
os-simulator/engine/bridge/: ProcessSpec.h  RestServer.cpp  RestServer.h  StateSerializer.h  WorkloadLoader.h
os-simulator/engine/core/: ClockController.cpp  ClockController.h  DecisionLogEntry.h  EventBus.cpp  EventBus.h  ISimModule.h  SimEnums.h  SimEvent.h  SimulationState.h
os-simulator/engine/modules/memory/: FrameTableEntry.h  IReplacementPolicy.h  MemoryManager.cpp  MemoryManager.h  MemoryMetrics.h  PageTable.h  PageTableEntry.h
os-simulator/engine/modules/memory/policies/: FIFOPolicy.h  LRUPolicy.h
os-simulator/engine/modules/process/: PCB.h  ProcessManager.cpp  ProcessManager.h  ProcessSpec.h  TCB.h
os-simulator/engine/modules/scheduler/: GanttEntry.h  ISchedulingPolicy.h  Scheduler.cpp  Scheduler.h  SchedulingMetrics.h
os-simulator/engine/modules/scheduler/policies/: FCFSPolicy.h  PriorityPolicy.h  RoundRobinPolicy.h
os-simulator/engine/modules/sync/: Mutex.h  Semaphore.h  SyncManager.cpp  SyncManager.h  SyncRequest.h
os-simulator/tests/: CMakeLists.txt  TESTING.md  test_clock_controller.cpp  test_engine_integration.cpp  test_event_bus.cpp  test_memory_compare.cpp  test_memory_manager.cpp  test_process_manager.cpp  test_scheduler.cpp  test_simulation_state.cpp  test_sync_manager.cpp
os-simulator/tests/api/: test_api_workflows.ps1
